added some more ejs files

--- a/SummerInternship/views/home.ejs
+++ b/SummerInternship/views/home.ejs
@@ -24,7 +24,7 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav ml-auto" style="font-family: 'Rubik', sans-serif;">
       <li class="nav-item">
-        <a class="nav-link" href="properties.html">PROPERTIES</b></a>
+        <a class="nav-link" href="/properties/">PROPERTIES</b></a>
       </li>
       
        <li class="nav-item">
@@ -34,15 +34,16 @@
             <a class="nav-link" href="/auth/login/">LOGIN</b></a>
                 <% } %>
       </li>
-      
+       <% if(!currentUsr){ %>
        <li class="nav-item">
-        <a class="nav-link" href="register.html">REGISTER</b></a>
+        <a class="nav-link" href="/auth/register/">REGISTER</b></a>
       </li>
+	   <% } %>
       <li class="nav-item">
         <a class="nav-link" href="#">PRIVACY POLICY</b><span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="aboutus.html">ABOUT US</b></a>
+        <a class="nav-link" href="/aboutus/">ABOUT US</b></a>
       </li>
 
   </div>
