some more finishing

--- a/SummerInternship/views/home.ejs
+++ b/SummerInternship/views/home.ejs
@@ -40,7 +40,7 @@
       </li>
 	   <% } %>
       <li class="nav-item">
-        <a class="nav-link" href="#">PRIVACY POLICY</b><span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="https://www.freeprivacypolicy.com/privacy/view/7447b68665fa1340500ed6de72fe2b06">PRIVACY POLICY</b><span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/aboutus/">ABOUT US</b></a>
