--- a/SummerInternship/views/aboutus.ejs
+++ b/SummerInternship/views/aboutus.ejs
@@ -28,14 +28,14 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav ml-auto" style="font-family: 'Rubik', sans-serif;">
      <li class="nav-item">
-        <a class="nav-link" href="properties.html">PROPERTIES</b></a>
+        <a class="nav-link" href="/properties/">PROPERTIES</b></a>
       </li>
       
       <li class="nav-item">
-        <a class="nav-link" href="#">PRIVACY POLICY</b><span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="https://www.freeprivacypolicy.com/privacy/view/7447b68665fa1340500ed6de72fe2b06">PRIVACY POLICY</b><span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="aboutus.html">ABOUT US</b></a>
+        <a class="nav-link" href="/aboutus/">ABOUT US</b></a>
       </li>
       
   </div>
