--- a/SummerInternship/views/login.ejs
+++ b/SummerInternship/views/login.ejs
@@ -33,14 +33,19 @@
       </li>
       
        <li class="nav-item">
-        <a class="nav-link" href="login.html">LOGIN</b></a>
+		<% if (currentUsr) { %>
+        	<a class="nav-link" href="/auth/logout/">LOGOUT</b></a>
+		<% } else { %>
+            <a class="nav-link" href="/auth/login/">LOGIN</b></a>
+                <% } %>
       </li>
-      
+       <% if(!currentUsr){ %>
        <li class="nav-item">
-        <a class="nav-link" href="register.html">REGISTER</b></a>
+        <a class="nav-link" href="/auth/register/">REGISTER</b></a>
       </li>
+	  <% } %>
       <li class="nav-item">
-        <a class="nav-link" href="#">PRIVACY POLICY</b><span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="https://www.freeprivacypolicy.com/privacy/view/7447b68665fa1340500ed6de72fe2b06">PRIVACY POLICY</b><span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="aboutus.html">ABOUT US</b></a>
