--- a/SummerInternship/views/register.ejs
+++ b/SummerInternship/views/register.ejs
@@ -30,21 +30,26 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav ml-auto" style="font-family: 'Rubik', sans-serif;">
        <li class="nav-item">
-        <a class="nav-link" href="properties.html">PROPERTIES</b></a>
+        <a class="nav-link" href="/properties/">PROPERTIES</b></a>
       </li>
       
-       <li class="nav-item">
-        <a class="nav-link" href="login.html">LOGIN</b></a>
+      <li class="nav-item">
+		<% if (currentUsr) { %>
+        	<a class="nav-link" href="/auth/logout/">LOGOUT</b></a>
+		<% } else { %>
+            <a class="nav-link" href="/auth/login/">LOGIN</b></a>
+                <% } %>
       </li>
-      
+       <% if(!currentUsr){ %>
        <li class="nav-item">
-        <a class="nav-link" href="register.html">REGISTER</b></a>
+        <a class="nav-link" href="/auth/register/">REGISTER</b></a>
+      </li>
+		<% } %>
+      <li class="nav-item">
+        <a class="nav-link" href="https://www.freeprivacypolicy.com/privacy/view/7447b68665fa1340500ed6de72fe2b06">PRIVACY POLICY</b><span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">PRIVACY POLICY</b><span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="aboutus.html">ABOUT US</b></a>
+        <a class="nav-link" href="/aboutus/">ABOUT US</b></a>
       </li>
 
       
