--- a/SummerInternship/views/register.ejs
+++ b/SummerInternship/views/register.ejs
@@ -66,19 +66,18 @@
 </div>
     
      <div class="signup-form" style="margin-top: 280px; font-family: Raleway;">
-      <form class="" action="index.html" method="post">
+      <form class="" action="/auth/register/" method="post">
          Name
-        <input type="text" placeholder="Full Name" class="txtb" style="max-width: 200%;">
+        <input type="text" placeholder="Full Name" class="txtb" style="max-width: 200%;" name="username">
         <span>Email</span>
-        <input type="email" placeholder="Email" class="txtb" >
+        <input type="email" placeholder="Email" class="txtb" name="email">
         <span>Password</span>
-        <input type="password" placeholder="Password" class="txtb">
+        <input type="password" placeholder="Password" class="txtb" name="password">
         <span>Confirm Password</span>
         <input type="text" placeholder="Confirm Password" class="txtb">
         <span>Address</span>
         <textarea name="Address" cols="40" rows="5" placeholder="Address" style=" text-align: center; width: 660px; font-family: 'Rubik',sans-serif;"></textarea>
        
-        </form>
        
        </div>
       <div style="margin-top: 600px;">
@@ -91,14 +90,18 @@
   
   <tr>
     <td class="btn1" style="width: 660px; height: 20px; background-color: none;"> 
-      <a href="register.html" id="reg" style="text-decoration: none;">
-        <p style="text-align: center;"><b>REGISTER</b></p>
+      <a href="" id="reg" style="text-decoration: none;">
+        <p style="text-align: center;"><button type="submit">
+			<b>REGISTER</b>
+			</button></p>
       </a>
       
     </td>
   </tr>
 </table>
 </div>
+		 </form>
+	 
 
   
 
