--- a/SummerInternship/views/properties.ejs
+++ b/SummerInternship/views/properties.ejs
@@ -22,6 +22,9 @@
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav ml-auto" style="font-family: 'Rubik', sans-serif;">
+	   <li class="nav-item">
+        <a class="nav-link" href="/listproperties/">LIST</b></a>
+       </li>
        <li class="nav-item">
 		<% if (currentUsr) { %>
         	<a class="nav-link" href="/auth/logout/">LOGOUT</b></a>
