--- a/SummerInternship/views/register.ejs
+++ b/SummerInternship/views/register.ejs
@@ -22,13 +22,16 @@
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light" style="height: 70px;">
-  <a class="navbar-brand" href="mainpage.html">BRAND NAME</a>
+  <a class="navbar-brand" href="/">BRAND NAME</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav ml-auto" style="font-family: 'Rubik', sans-serif;">
+	   <li class="nav-item">
+        <a class="nav-link" href="/listproperties/">LIST</b></a>
+      </li>
        <li class="nav-item">
         <a class="nav-link" href="/properties/">PROPERTIES</b></a>
       </li>
