added property list page 2

--- a/SummerInternship/views/login.ejs
+++ b/SummerInternship/views/login.ejs
@@ -32,7 +32,7 @@
         <a class="nav-link" href="/listproperties/">LIST</b></a>
       </li>
        <li class="nav-item">
-        <a class="nav-link" href="properties.html.html">PROPERTIES</b></a>
+        <a class="nav-link" href="/properties/">PROPERTIES</b></a>
       </li>
       
        <li class="nav-item">
