--- a/SummerInternship/views/properties.ejs
+++ b/SummerInternship/views/properties.ejs
@@ -15,7 +15,7 @@
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light" style="height: 70px;">
-  <a class="navbar-brand" href="mainpage.html">BRAND NAME</a>
+  <a class="navbar-brand" href="/">BRAND NAME</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
