--- a/views/register.ejs
+++ b/views/register.ejs
@@ -29,6 +29,10 @@
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav ml-auto" style="font-family: 'Rubik', sans-serif;">
+		<form class="form-inline my-2 my-lg-0" style="margin-right: 20px;">
+      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" name="location">
+      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+    </form>
 	   <li class="nav-item">
         <a class="nav-link" href="/listproperties/">LIST</b></a>
       </li>
